# centinel-engine

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCUMENTATION_COVERAGE.md  Dockerfile  Makefile  QUICKSTART.md  README-dev-v9.md  README.md  SECURITY.md  SECURITY_AUDIT.md  __init__.py  bandit.yaml  bot.py  chaos_config.yaml.example  chaos_test.py  config.example.yaml  conftest.py  dashboard.py  docker-compose.yml  fly.toml  maintain.py  nginx.conf  panic.py  proxies.yaml  pyproject.toml  pytest.ini  reactivar.py  renovate.json  requirements-chaos.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  rules.yaml  (+4 more)
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.streamlit/: config.toml
Dev Diary/: Version_0.0.31_-_Dev-v3.md  Version_0.0.41.md
api/: main.py
auth/: __init__.py  user_manager.py
centinel_engine/: .env.example  __init__.py  arbitrum_hook.py  cloudflare_hook.py  cne_endpoint_healer.py  config_loader.py  proxy_manager.py  rate_limiter.py  scheduler.py  secure_backup.py  telegram_hook.py  threat_detector.py  vital_signs.py
command_center/: .env.example  README.md  __init__.py  advanced_security_config.yaml  attack_config.yaml  config.yaml  config.yaml.example  endpoints.py  main.py  master_switch.py  rules.yaml  rules_config.py  security_config.yaml  settings.py
config/: config.yaml  inconsistent_key.json  simulation_2025.yaml
core/: __init__.py  advanced_security.py  analyze_rules.py  attack_logger.py  fetcher.py  hasher.py  http_compat.py  logger.py  security.py  security_utils.py
dashboard/: GeoJSON_HN.geojson  README.md  __init__.py  centinel_pdf_report.py  panel_chaos.py  panel_replay.py  requirements.txt  streamlit_app.py  utils.py
data/: snapshot_2026-01-02_21-23-38.json  snapshot_2026-01-02_21-27-10.json  snapshot_2026-01-02_22-35-28.json  snapshot_2026-01-03_02-05-50.json
data_test/: summary.json
docs/: ANIMAL-DEFENSES-ES.md  ANOMALY-DETECTION.md  API.md  ARCHITECTURE.md  EXECUTION-PLAN-90D.md  EXTERNAL-ANCHOR.md  FALSE_POSITIVE_ANALYSIS.md  GOVERNANCE.md  INCIDENT_RESPONSE.md  INSTITUTIONAL_READINESS.md  METHODOLOGY.md  MULTI-WITNESS-FEDERATION.md  OPERATOR-PANEL.md  OPERATOR-RUNBOOKS.md  PAGES-GUIDE.md  QUALITY-METRICS.md  QUICKSTART.md  README.md  REPLICATION_GUIDE.md  SECURITY-REVIEW.md  SELF-HEALTH.md  SETUP-GUIDE.md  THEORY_OF_CHANGE.md  VERIFICATION-BUNDLE.md  WITNESS-SETUP-DETAILED.md  alerts.md  architecture.md  ci-cd.md  config.md  dashboard.md  deploy.md  dev-diary.md  emergencia.md  governance.md  manual.md  (+10 more)
(+475 files in other folders)
