[tool.poetry]
name = "centinel-engine"
version = "0.1.0"
description = "C.E.N.T.I.N.E.L.: sistema técnico para auditoría continua de datos electorales públicos en Honduras"
authors = ["userf8a2c4 <contact@centinel.app>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/userf8a2c4/centinel-engine"
repository = "https://github.com/userf8a2c4/centinel-engine"
documentation = "https://github.com/userf8a2c4/centinel-engine#readme"
keywords = ["auditoria-electoral", "transparencia", "hashchain", "open-data", "civic-tech"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
packages = [{ include = "centinel", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.31.0"
playwright = ">=1.49.0"
playwright-stealth = ">=1.0.6"
pandas = ">=2.1.0"
numpy = ">=1.24.0"
scipy = ">=1.11.4"
scikit-learn = ">=1.5.0"
python-dateutil = ">=2.8.2"
PyYAML = ">=6.0.2"
python-dotenv = ">=1.0.1"
cryptography = "^42.0.0"
jsonschema = ">=4.22.0"
rich = ">=13.7.0"
httpx = ">=0.27.0,<1.0.0"
apscheduler = ">=3.10.4,<4.0.0"
flask-limiter = ">=3.7.0,<4.0.0"
Flask = ">=3.0.0,<4.0.0"
tenacity = ">=8.2.0,<10.0.0"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
structlog = ">=23.0.0,<26.0.0"
typer = ">=0.9.0,<1.0.0"
slowapi = ">=0.1.9,<1.0.0"
boto3 = ">=1.34.0"
psutil = ">=5.9.0"
b2sdk = ">=1.32.0"
web3 = ">=6.20.0,<7.0.0"
cloudflare = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ruff = ">=0.6.0,<0.7.0"
black = ">=24.0.0,<25.0.0"
flake8 = ">=7.0.0,<8.0.0"
mypy = ">=1.10.0,<1.12.0"
pytest-cov = ">=5.0.0,<6.0.0"
pytest-httpx = ">=0.35.0,<0.36.0"
pytest-mock = ">=3.14.0,<4.0.0"
responses = ">=0.25.0,<0.26.0"
bandit = ">=1.7.9,<2.0.0"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--import-mode=importlib",
  "--ignore=scripts/chaos_test.py"
]

[tool.black]
line-length = 120

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110"]
exclude = ["chaos_test.py", "scripts/chaos_test.py"]

[tool.poetry.scripts]
centinel = "centinel.cli:main"
command-center = "command_center.main:main"
watchdog-daemon = "scripts.watchdog_daemon:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
